[gd_scene load_steps=25 format=3 uid="uid://e7qc14vg65vn"]

[ext_resource type="Texture2D" uid="uid://5k6naxlc4vat" path="res://backgrounds/home_town_outside_map_level2_house.png" id="1_fsww6"]
[ext_resource type="Script" path="res://level2/level2-outside the house.gd" id="1_v1rcf"]
[ext_resource type="Texture2D" uid="uid://cmpqp8oqxxd6v" path="res://level2/PC _ Computer - Deltarune - Non-Playable Characters - Toriel.png" id="2_8cb1r"]
[ext_resource type="Script" path="res://level2/toriel.gd" id="3_0wskj"]
[ext_resource type="Script" path="res://player/noelle_player_body.gd" id="3_deyaj"]
[ext_resource type="Texture2D" uid="uid://dhol847drpmmm" path="res://player/noelle_sprite_grid_fixed_22h.png" id="4_557gf"]
[ext_resource type="PackedScene" uid="uid://cuxxb1nr4ppry" path="res://talking_head/DialogueBox.tscn" id="6_gs7j4"]
[ext_resource type="Script" path="res://level2/exitToLevel1.gd" id="8_swxcf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hkbdy"]
size = Vector2(26, 40)

[sub_resource type="Animation" id="Animation_xajlo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("noelle_player_charasprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_eajw5"]
resource_name = "move_down"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("noelle_player_charasprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_fccd1"]
resource_name = "move_left"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("noelle_player_charasprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [44, 45, 46, 47, 48, 49, 50, 47, 48, 50, 47, 50, 50]
}

[sub_resource type="Animation" id="Animation_cgprs"]
resource_name = "move_right"
length = 1.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("noelle_player_charasprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [56, 57, 58, 55, 56, 57, 58, 56, 57, 58, 55, 56, 57, 58, 57]
}

[sub_resource type="Animation" id="Animation_byfp8"]
resource_name = "move_up"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("noelle_player_charasprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [15, 15, 16, 17, 18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hgyo1"]
_data = {
"RESET": SubResource("Animation_xajlo"),
"move_down": SubResource("Animation_eajw5"),
"move_left": SubResource("Animation_fccd1"),
"move_right": SubResource("Animation_cgprs"),
"move_up": SubResource("Animation_byfp8")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bfhiq"]
size = Vector2(25, 46.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dub41"]
size = Vector2(20, 19)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ybq5e"]
size = Vector2(220, 21.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fdvc3"]
size = Vector2(631, 141)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vhha1"]
size = Vector2(133.5, 516.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7e7vr"]
size = Vector2(122.625, 524.938)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m0wdk"]
size = Vector2(553, 78.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xbph6"]
size = Vector2(221, 162)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqobr"]
size = Vector2(20, 29)

[node name="Level2-outsideTheHouse" type="Node2D"]
script = ExtResource("1_v1rcf")

[node name="HomeTownOutsideMapLevel2House" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(108, 101)
texture = ExtResource("1_fsww6")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="DialogueBox" parent="CanvasLayer" instance=ExtResource("6_gs7j4")]
layout_direction = 1
anchors_preset = -1
anchor_top = 1.0
offset_left = 474.0
offset_top = -150.0
offset_right = -474.0

[node name="toriel" type="Area2D" parent="."]
position = Vector2(207, 185)
script = ExtResource("3_0wskj")

[node name="npc-toriel" type="Sprite2D" parent="toriel"]
texture_filter = 1
texture = ExtResource("2_8cb1r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="toriel"]
position = Vector2(-1, 9)
shape = SubResource("RectangleShape2D_hkbdy")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(347, 132)
script = ExtResource("3_deyaj")

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(-200, 25)
offset = Vector2(12, 0)
zoom = Vector2(3.47, 3.47)

[node name="noelle_player_charasprite" type="Sprite2D" parent="Player"]
texture_filter = 1
position = Vector2(-204, 45)
texture = ExtResource("4_557gf")
hframes = 22
vframes = 5

[node name="PlayerAnimation" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_hgyo1")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(-205, 44.75)
shape = SubResource("RectangleShape2D_bfhiq")

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="Marker2D" type="Marker2D" parent="SpawnPoints"]
position = Vector2(262, 127)

[node name="invisible wall" type="StaticBody2D" parent="."]
position = Vector2(331, 107)

[node name="CollisionShape2D7" type="CollisionShape2D" parent="invisible wall"]
position = Vector2(-124, 62.5)
shape = SubResource("RectangleShape2D_dub41")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="invisible wall"]
position = Vector2(-212, 16.25)
shape = SubResource("RectangleShape2D_ybq5e")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="invisible wall"]
position = Vector2(-191.5, 397)
shape = SubResource("RectangleShape2D_fdvc3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="invisible wall"]
position = Vector2(-439.75, 122.75)
shape = SubResource("RectangleShape2D_vhha1")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="invisible wall"]
position = Vector2(69.6875, 132.531)
shape = SubResource("RectangleShape2D_7e7vr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="invisible wall"]
position = Vector2(-218, -97.25)
shape = SubResource("RectangleShape2D_m0wdk")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="invisible wall"]
position = Vector2(-213, -50)
shape = SubResource("RectangleShape2D_xbph6")

[node name="exitToLEvel1" type="Node2D" parent="."]

[node name="exitToLevel1" type="Area2D" parent="exitToLEvel1"]
script = ExtResource("8_swxcf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="exitToLEvel1/exitToLevel1"]
position = Vector2(141, 138.5)
shape = SubResource("RectangleShape2D_fqobr")

[connection signal="body_entered" from="toriel" to="toriel" method="_on_body_entered"]
[connection signal="body_exited" from="toriel" to="toriel" method="_on_body_exited"]
[connection signal="body_entered" from="exitToLEvel1/exitToLevel1" to="exitToLEvel1/exitToLevel1" method="_on_body_entered"]
